@@ -5,6 +5,9 @@ See ChangeLog for full commit logs; this is summarized/major changes.
 
 pkgcore 0.2.9:
 
+* Bit more DepSet optimizations; specifically collapses AND restriction into
+  the parent if it is also an AND restriction.
+
 * make --no-auto work correctly for pebuild
 
 * delay DISTDIR setup till unpack phase to prevent any invalid access; also
